<resources>
    <string name="appName">MoneyMatrix</string>
    <string name="descriptionApp">Ваш особистий фінансовий помічник.</string>

    <string name="btnNavMenuBillings">Рахунки</string>
    <string name="btnNavMenuCategories">Категорії</string>
    <string name="btnNavMenuOperations">Операції</string>
    <string name="btnNavMenuReview">Огляд</string>
    <string name="btnNavMenuProfile">Профіль</string>

    <string name="textSignIn">Увійти</string>
    <string name="textCreateUser">Створити</string>
    <string name="textPageProfile">Мій профіль</string>

    <string name="textBillings">Рахунки</string>
    <string name="textBilling">Рахунок</string>
    <string name="textIncomes">Активи</string>
    <string name="textIncome">Актив</string>
    <string name="textRevenues">Доходи</string>
    <string name="textExpenses">Витрати</string>
    <string name="textBalance">Баланс</string>
    <string name="textSavings">Заощадження</string>
    <string name="textDebtys">Борги</string>
    <string name="textTurnover">Оборот</string>
    <string name="textReceipts">Надходження</string>
    <string name="textNewBillings">Новий рахунок</string>
    <string name="textEditBillings">Редагування рахунка</string>
    <string name="textNewIncome">Новий дохід</string>
    <string name="textTypeBillings">Тип рахунка</string>
    <string name="textType">тип</string>
    <string name="textBuy">покупка</string>
    <string name="textSale">продаж</string>
    <string name="textName">Ім`я</string>
    <string name="textTypeCurrency">Тип валюти</string>
    <string name="textDebtor">Особа що зобов\'язана</string>
    <string name="textReturnDate">Дата повернення</string>
    <string name="textAmountIncome">Сума доходу</string>
    <string name="textCreditLimit">Кредитний ліміт</string>
    <string name="textDebtAmount">Сумма боргу</string>
    <string name="textFrequency">Частота отримання</string>
    <string name="textDateReceived">Дата отримання</string>
    <string name="textCategoryIncome">Категорія доходу</string>
    <string name="textLoadDate">завантаження даних..</string>
    <string name="textWages">зарплата</string>
    <string name="textNotBillings">У вас відсутньо рахунки, вам необхідно їх добавити.</string>
    <string name="textNotIncomes">У вас відсутньо активи, вам необхідно їх добавити.</string>
    <string name="textFromWhichWeDebit">З рахунку</string>
    <string name="textToWhichWeTransfer">На рахунок</string>
    <string name="textSpearFromWhichWeDebit">списати</string>
    <string name="textEnrollToWhichWeTransfer">Зарахувати</string>
    <string name="textNext">продовжити</string>
    <string name="textLiabilities">пасиви</string>
    <string name="textResetPassword">відновити пароль</string>
    <string name="textSendMessage">відправити листа</string>
    <string name="textAddBillings">Добавити рахунок</string>
    <string name="textAddTarget">Додати ціль</string>
    <string name="textOrdinary">Звичайний</string>
    <string name="textDebt">Борговий</string>
    <string name="textCumulative">Накопичувальний</string>
    <string name="textLiability">Пасив</string>
    <string name="textEdit">Редагувати</string>
    <string name="textReplenish">Поповнити</string>
    <string name="textWriteOff">Списати</string>
    <string name="textShare">Переказати</string>
    <string name="textOperations">Операції</string>
    <string name="textDelete">Видалити</string>
    <string name="textRevenue">дохід</string>
    <string name="textWitchRememberMe">Запам\'ятати мене</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">password</string>
    <string name="textNameBillings">Ім\'я рахунку</string>
    <string name="textNameIncome">Назва доходу</string>
    <string name="textSourceIncome">Джерело доходу</string>
    <string name="textNotesIncome">Додаткові нотатки</string>
    <string name="textSelect">Виберіть</string>
    <string name="textInputData">Напишіть дату отримання</string>
    <string name="textInputDataDescription">Формат дати 00.00.0000</string>
    <string name="textSelectTypeBillings">Виберіть тип рахунка</string>
    <string name="textSelectTypeCurrencies">Виберіть тип валюти</string>
    <string name="textSelectFrequency">Виберіть тип частоти отримання</string>
    <string name="textSelectCategory">Виберіть категорію доходу</string>
    <string name="textSelectBillingsBalance">Баланс рахунку</string>
    <string name="textSelectBillingsCreditLimit">Кредитний ліміт</string>
    <string name="textSelectDebtor">Виберіть сторону боржника</string>
    <string name="textSelectDebtIAmOwed">Мені винні</string>
    <string name="textSelectDebtIMust">Я повинен</string>
    <string name="textSelectTotalAmountOfDebt">Загальна сума боргу</string>
    <string name="textSelectObjective">Мета</string>
    <string name="textForgotPassword">Забули пароль?</string>
    <string name="textAvailable">Доступно:</string>
    <string name="textApprove">схвалити операцію</string>
    <string name="textTransactionIsSuccessful">транзакція успішна</string>
    <string name="textExceededCreditLimit">Перевищений кредитний ліміт</string>
    <string name="textExceededTheAvailableAmount">Перевищена доступна сумма</string>
    <string name="textHello">Привіт,</string>
    <string name="textUser">користувач</string>
    <string name="textNewMessage">Нові повідомлення</string>
    <string name="textViewBills">Переглянути свої рахунки</string>
    <string name="textViewIncomes">Переглянути свої активи</string>
    <string name="textСonnectCardMonobank">Підключити карту monobank</string>
    <string name="textWarning">Зверніть увагу</string>
    <string name="textNoMessagesAtTheMoment">На даний момент повідомлень не існує</string>
    <string name="textPrivateBank">Приват банк</string>
    <string name="textMonobank">monobank</string>
    <string name="textCurrenсy">курс валют</string>
    <string name="textBack">назад</string>
    <string name="textHistoryBilling">Історія рахунку</string>
    <string name="textViewAll">Переглянути усі</string>
    <string name="textDateCreate">Дата створення:</string>
    <string name="textDataNotFound">Записи відсутні</string>
    <string name="textTheAccountIsNoLongerInExistence">Рахунка більше не їснує</string>


    <string name="descriptionSignUp">виберіть один із варіантів створення користувача</string>
    <string name="descriptionHaveAccount">У вас вже є профіль?</string>
    <string name="descriptionSingUpInputDate">Вкажіть свою email адресу та пароль</string>
    <string name="descriptionSingUpVerificationEmail">На вашу електрону скриньку  ми відправили листа з підтвердженням реєстрації, вам необхідно зайти у вашу електрону скриньку та підтвердити реєстрацію.</string>
    <string name="descriptionResetPass">Для того щоб відновити ваш пароль, ведіть адресу електронної скриньки та ми надішлемо вам на email листа з інструкцією по відновленню пароля.</string>

    <string name="textErrorMessageEmail">Невідомий тип електронної адреси, рекомендуємо використовувати @gmail.com</string>
    <string name="textErrorMessageVerificationEmail">Ви не підтвердили свою електронну скриньку.</string>
    <string name="textErrorMessageCreateNewUser">Схоже що такий користувач вже їснує</string>
    <string name="textErrorMessagePassword">Пароль має містити більше 12 символів</string>
    <string name="textErrorMessageTextPasswordOrEmail">Неправильний пароль або email перевірте свої дані ще раз.</string>
    <string name="textErrorMessageNotFoundEmail">схоже такого користувача з таким email адресою не їснує.</string>
    <string name="textFailureDeleteBillings">Виникла помилка, рахунок не був видалений</string>
    <string name="textFailureEnteredTheData">Підчас запису даних виникла помилка</string>
    <string name="textFailureSignIn">Помилка авторизації</string>
    <string name="textFailureErrorTypeEmail">Помилка: невідомий email</string>
    <string name="textFailureEditBillings">Помилка зміни в рахунок не було внесено</string>
    <string name="textNoInternetConnection">no internet connection</string>

    <string name="textSuccessfullyMessageSendEmail">Лист успішно був відправлений на email</string>
    <string name="textSuccessfulSendMessageEmail">Повідомлення успішно було відправлено</string>
    <string name="textSuccessfulEnteredTheData">Успішно внесли данні</string>
    <string name="textSuccessfulDeleteBillings">Успішно видалили рахунок</string>
    <string name="textSuccessSignIn">Авторизація успішна</string>
    <string name="textSuccessfulMessageResetPass">Лист для скидання пароля надіслано на вашу адресу електронної пошти.</string>
    <string name="textSuccessfulEditBillings">Успішно внесено зміни у рахунок</string>
    <string name="textSuccessfulAddIncome">Успішно створили новий актив</string>


    <string name="textNumberZero">0</string>
    <string name="textNumberOne">1</string>
    <string name="textNumberTwo">2</string>
    <string name="textNumberThree">3</string>
    <string name="textNumberFour">4</string>
    <string name="textNumberFive">5</string>
    <string name="textNumberSix">6</string>
    <string name="textNumberSeven">7</string>
    <string name="textNumberEight">8</string>
    <string name="textNumberNine">9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>