<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/modal_dialog_bg_lite">

    <TextView
        android:id="@+id/title_modal_view_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:text="@string/textSelect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_modal_billings_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/icon_baseline_credit_card_24"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            android:text="@string/textBilling" />

        <Button
            android:id="@+id/btn_modal_asset_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/icon_baseline_monetization_on_24"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            android:text="@string/textIncome" />

        <Button
            android:id="@+id/btn_modal_liability_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/icon_baseline_trending_down_24"
            android:drawablePadding="10dp"
            android:textAllCaps="false"
            android:text="@string/textLiability" />
    </LinearLayout>
</LinearLayout>