<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".basic.functionality.fragment.dialogModal.CalculatorFragment">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp">

           <TextView
               android:id="@+id/balance"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/textNumberZero"
               android:textColor="@color/black"
               android:textSize="26sp"
               android:textStyle="bold"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/typeCurrency"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="26sp"
               android:textStyle="bold"
               android:text="UAH"
               android:layout_marginStart="5dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toEndOf="@+id/balance"
               app:layout_constraintTop_toTopOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:id="@+id/elementKeyboard"
           android:orientation="horizontal">


           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <Button
                   android:id="@+id/buttonZero"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberZero" />

               <Button
                   android:id="@+id/buttonOne"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberOne"/>
               <Button
                   android:id="@+id/buttonTwo"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberTwo" />
           </LinearLayout>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">


               <Button
                   android:id="@+id/buttonThree"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberThree"/>

               <Button
                   android:id="@+id/buttonFour"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberFour"/>

               <Button
                   android:id="@+id/buttonFive"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberFive"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <Button
                   android:id="@+id/buttonSix"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberSix"/>

               <Button
                   android:id="@+id/buttonSeven"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberSeven" />

               <Button
                   android:id="@+id/buttonEight"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberEight"/>

           </LinearLayout>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <Button
                   android:id="@+id/buttonNine"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:textSize="20sp"
                   android:text="@string/textNumberNine" />


               <ImageButton
                   android:id="@+id/buttonDivision"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:src="@drawable/icon_division_symbol_svgrepo_com"/>

               <ImageButton
                   android:id="@+id/buttonMultiplication"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:src="@drawable/icon_multiplication_svgrepo" />


           </LinearLayout>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <ImageButton
                   android:id="@+id/buttonSubtraction"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:src="@drawable/icon_subtraction_svgrepo" />

               <ImageButton
                   android:id="@+id/buttonAddition"
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:background="@drawable/button_gray_square"
                   android:src="@drawable/icon_addition_svgrepo"/>
           </LinearLayout>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <ImageButton
               android:id="@+id/buttonDelete"
               android:layout_width="160dp"
               android:layout_height="50dp"
               android:background="@drawable/bg_gradient_red"
               android:src="@drawable/icon_baseline_backspace_34"
               />

           <ImageButton
               android:id="@+id/buttonSetUp"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:background="@drawable/bg_gradient_blue"
               android:src="@drawable/icon_baseline_check_34"
               />
       </LinearLayout>

   </LinearLayout>

</FrameLayout>