<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_blue"
    tools:context=".LobbyActivity">

    <ImageView
        android:id="@+id/LogoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="250dp"
        android:src="@drawable/icon_review_24_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/LogoApp"
        app:layout_constraintTop_toTopOf="@+id/LogoApp">

        <TextView
            android:id="@+id/titlePage"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/appName"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/descriptionApp"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_lite_white_v2"
            android:layout_marginRight="25dp"
            android:text="@string/textSignIn" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/button_lite_black"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:text="@string/textCreateUser" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>