<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basic.functionality.fragment.billings.factory.DebtFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linerLayout_type_billings"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/select_input"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:translationZ="4dp">

            <TextView
                android:id="@+id/textTitleTypeBillings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textTypeBillings"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/icon_baseline_edit_14" />

            <TextView
                android:id="@+id/type_billings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerLayout_name_billings"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/select_input"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:translationZ="4dp">

            <TextView
                android:id="@+id/textTitleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textName"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/icon_baseline_edit_14" />

            <TextView
                android:id="@+id/name_billings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerLayout_type_currency"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/select_input"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_type_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textTypeCurrency"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/icon_baseline_edit_14" />


            <TextView
                android:id="@+id/type_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liner_layout_debt_amount"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/select_input"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"

            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_debt_amount_new_billings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textDebtAmount"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/icon_baseline_edit_14" />


            <TextView
                android:id="@+id/debt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerLayout_debtor"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/select_input"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_debtor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textDebtor"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/icon_baseline_edit_14" />


            <TextView
                android:id="@+id/debtor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerLayout_return_date"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/select_input"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_return_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textReturnDate"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/icon_baseline_edit_14" />


            <TextView
                android:id="@+id/returnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>